@@ -1,7 +1,7 @@
 ﻿[Updates]
 CurrentRelease = v0.4.0.1
-ReleaseDate = 2023-04-05 13:31:00.082411
-LastCheckDate = 2023-04-05 13:31:00.082411
+ReleaseDate = 2023-04-05 14:57:01.982691
+LastCheckDate = 2023-04-05 14:57:01.982691
 DisableUpdateCheck = 0
 PauseDays = 0
 
